supplier service refactor